--- a/index.html
+++ b/index.html
@@ -5,63 +5,45 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
-    <title></title>
+    <title>Which Epicodus track is right for you?</title>
   </head>
   <body>
     <div class="container">
-      <h1></h1>
-      <form id="">
+      <h1>Which Epicodus track is right for you?</h1>
+      <form id="quiz">
         <div class="form-group">
-          <h3></h3>
+          <h3>Would you like to work on the front end or back end?</h3>
           <div class="radio">
             <label>
-              <input value= type="radio" name="" checked>
-
+              <input value= type="radio" name="febe" checked>
+              Front end!
             </label>
           </div>
           <div class="radio" id="">
             <label>
-              <input value= type="radio" name="">
-              Cream and Sugar
+              <input value= type="radio" name="febe">
+              Back end!
+            </label>
+          </div>
+        </div>
+        <div class="form-group">
+          <h3>Are you more interested in design or functionality?</h3>
+          <div class="radio" id="">
+            <label>
+              <input value= type="radio" name="dof" checked>
+              Design
             </label>
           </div>
           <div class="radio">
             <label>
-              <input value= type="radio" name="">
-
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input value= type="radio" name="">
-
+              <input value= type="radio" name="dof">
+              Functionality
             </label>
           </div>
         </div>
         <div class="form-group">
           <h3></h3>
-          <div class="radio" id="">
-            <label>
-              <input value=1 type="radio" name="" checked>
-              Cats
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input value= type="radio" name="">
-              Dogs
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input value= type="radio" name="">
-
-            </label>
-          </div>
-        </div>
-        <div class="form-group">
-          <h3></h3>
-          <select required class="form-control" id="date-type" name="date-type">
+          <select required class="form-control" id="" name="">
             <option value=></option>
             <option value=></option>
             <option value=></option>
