--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
           </div>
         </div>
         <div class="form-group">
+          <h3>Which one of these activities appeals most to you?</h3>
+          <select required class="form-control" id="build" name="build">
+            <option value=>Internal Software</option>
+            <option value=>Web Applications</option>
+            <option value=>Android User Interfaces</option>
+          </select>
+        </div>
+        <div class="form-group">
           <h3></h3>
           <select required class="form-control" id="" name="">
             <option value=></option>
@@ -50,16 +58,7 @@
             <option value=></option>
           </select>
         </div>
-        <div class="form-group">
-          <h3></h3>
-          <select required class="form-control" id="person-type" name="person-type">
-            <option value=></option>
-            <option value=></option>
-            <option value=></option>
-            <option value=></option>
-          </select>
-        </div>
-        <button type="submit" id="" class="btn btn-primary">Find out your celebrity match!</button>
+        <button type="submit" id="" class="btn btn-primary"></button>
       </form>
       <div class="well">
 
