add questions, answers to html. add relevant backend logic

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <h3>Would you like to work on the front end or back end?</h3>
           <div class="radio">
             <label>
-              <input value= type="radio" name="febe" checked>
+              <input value=2 type="radio" name="febe" checked>
               Front end!
             </label>
           </div>
           <div class="radio" id="">
             <label>
-              <input value= type="radio" name="febe">
+              <input value=1 type="radio" name="febe">
               Back end!
             </label>
           </div>
@@ -30,13 +30,13 @@
           <h3>Are you more interested in design or functionality?</h3>
           <div class="radio" id="">
             <label>
-              <input value= type="radio" name="dof" checked>
+              <input value=2 type="radio" name="dof" checked>
               Design
             </label>
           </div>
           <div class="radio">
             <label>
-              <input value= type="radio" name="dof">
+              <input value=1 type="radio" name="dof">
               Functionality
             </label>
           </div>
@@ -50,8 +50,8 @@
           </select>
         </div>
         <div class="form-group">
-          <h3></h3>
-          <select required class="form-control" id="" name="">
+          <h3>How broad do you want your language to be?</h3>
+          <select required class="form-control" id="lang" name="lang">
             <option value=></option>
             <option value=></option>
             <option value=></option>
