make dropdown options required. add spaces in result message

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="form-group">
           <h3>Which of these appeals to you?</h3>
           <select required class="form-control" id="appeal" name="appeal">
-            <option>Select</option>
+            <option value="">Select</option>
             <option value="1">Internal Software</option>
             <option value="2">Web Applications</option>
             <option value="1">Android User Interfaces</option>
@@ -58,7 +58,7 @@
         <div class="form-group">
           <h3>How broad in application do you want your language to be?</h3>
           <select required class="form-control" id="lang" name="lang">
-            <option>Select</option>
+            <option value="">Select</option>
             <option value="1">Very Specific</option>
             <option value="2">Specific</option>
             <option value="3">Broad</option>
@@ -68,7 +68,7 @@
         <div class="form-group">
           <h3>What sort of company would you like to work for?</h3>
           <select required class="form-control" id="comp" name="comp">
-            <option>Select</option>
+            <option value="">Select</option>
             <option value="1">None, I'd like to work for myself</option>
             <option value="1">A small startup</option>
             <option value="2">A decent-sized company</option>
