made name text input required, with alert message if nothing is entered

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form id="quiz">
         <div class="form-group">
           <h3>What is your name?</h3>
-          <input type="text" name="person">
+          <input type="text" name="person" required>
         </div>
         <div class="form-group">
           <h3>Would you like to work on the front end or back end?</h3>
