--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Which Epicodus track is right for you?</title>
   </head>
   <body>
-    <div class="container">
+    <div class="jumbotron">
       <h1>Which Epicodus track is right for you?</h1>
+    </div>
+    <div class="container">
       <form id="quiz">
         <div class="form-group">
           <h3>What is your name?</h3>
