--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
               Back end!
             </label>
           </div>
+          <div class="radio">
+            <label>
+              <input value="2" type="radio"
+              name="febe">
+              What the who now?
+            </label>
+          </div>
         </div>
         <div class="form-group">
           <h3>Are you more interested in design or functionality?</h3>
@@ -44,6 +51,12 @@
             <label>
               <input value=1 type="radio" name="dof">
               Functionality
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input value=2 type="radio" name="dof">
+              I have no idea...
             </label>
           </div>
         </div>
